--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ editor: source
 
 🏨 Virtual
 
-💥 **FREE** [workshop registration](https://www.eventbrite.com/) 
+💥 **FREE** [workshop registration](https://events.zoom.us/ev/AvobJEOTVwkUnH6_TgLZDZJauk4dxfm5jCG8JFNN9zukOcsVLvTN~AmO5XY5HRBcxkKG6Hga1aXZaYtpBSER6jHms1seP-NNOA0dhcQZUGJ2NWg)
 
 ------------------------------------------------------------------------
 
@@ -18,9 +18,7 @@ editor: source
 
 In this session, I will delve into the (near) future of regulatory submissions, emphasizing three key advancements: full reproducibility, open-source technologies, and interactive data capabilities. I will explore how Continuous Integration and Continuous Deployment (CICD) practices and containerization are driving the evolution of regulatory submissions by ensuring that processes are fully reproducible and automated. Then I will describe how open-source technologies and R packages are transforming clinical reporting by providing robust, customizable solutions that enhance transparency and flexibility. Finally, I will showcase the power of interactive data capabilities using {teal} and Shiny, demonstrating how these tools facilitate dynamic data exploration and visualization. Through practical examples, I will showcase how integrating these innovations can streamline regulatory workflows, improve data management, and, hopefully, foster more informed decision-making in pharmaceutical research. Ideal for R developers, data scientists, and clinical researchers, this session will equip you with the knowledge to embrace these future-ready approaches in your own work.
 
-
 ## Learning objectives
-
 
 ## Is this course for me?
 
@@ -28,30 +26,27 @@ If your answer to any of the following questions is "yes", then this is the righ
 
 -   Do you make adverse event tables or descriptive statistics tables in R? Or table shells for either?
 
-
-The workshop is designed for those with some experience in R. 
-It will be assumed that participants can perform basic data manipulation.
-Experience with the {tidyverse} and the `%>%` operator is a plus, but not required.
+The workshop is designed for those with some experience in R. It will be assumed that participants can perform basic data manipulation. Experience with the {tidyverse} and the `%>%` operator is a plus, but not required.
 
 ## Prework
 
-**THIS WILL BE ON POSIT CLOUD**
-Before attending the workshop please have the following installed and configured on your machine.
+**THIS WILL BE ON POSIT CLOUD** Before attending the workshop please have the following installed and configured on your machine.
 
--   Recent version of **R** 
+-   Recent version of **R**
 
 -   Recent version of **RStudio**
 
 -   Most recent release of xxx and other packages used in workshop.
 
-    ```r
+    ``` r
     # install isntructions
     ```
--   Ensure you can knit R markdown documents
-    - Open RStudio and create a new Rmarkdown document
-    - Save the document and check you are able to knit it.
 
- 
+-   Ensure you can knit R markdown documents
+
+    -   Open RStudio and create a new Rmarkdown document
+    -   Save the document and check you are able to knit it.
+
 # Instructors
 
 ![](images/Davide_Garolini-PH.png){style="float:left;padding: 0 10px 0 0;" fig-alt="Headshot of Davide Garolini" width="150"}
@@ -59,4 +54,9 @@ Before attending the workshop please have the following installed and configured
 [**Davide Garolini**](https://www.google.com/) (he/his) is a Statistical Engineer with an M.Phys. in Biophysics and a Ph.D. in Computational Neuroscience, has over ten years of R programming and package development expertise, specializing in clinical data analysis and regulatory deliveries. He significantly contributes to the NEST project by improving key tools like {rtables}, {tern}, and {gtsummary} for regulatory compliance. Davide strongly advocates for open-source collaboration, promoting advancements in clinical research.
 
 <br>
+
 <br>
+
+![](images/profile_picture.png){style="float:left;padding: 0 10px 0 0;" fig-alt="Headshot of Leena Khatri" width="150"}
+
+\[**Leena Khatri**\] (she/her) is a Senior Data Scientist in Product Development Data Sciences at Roche. She is currently the Product Owner of the NEST data sciences expert team and associated packages such as {rtables}, {tern}. In addition she leads statistical programming teams, supporting late phase programs in Immunology. Leena is a strong advocate for the end to end usage of R in clinical reporting.
