--- a/exercises.qmd
+++ b/exercises.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Introducing {gtreg}: Exercises"
+title: "Getting there: Exercises"
 format: 
   html:
     code-fold: true
@@ -8,267 +8,149 @@ format:
 
 # Instructions:
 
-<!-- **Recommended:** Complete these exercises in the dedicated R in Pharma RStudio Cloud work space, which comes with -->
-
-<!-- 1. all packages pre-installed, and -->
-
-<!-- 2. an Rmarkdown document to fill in. -->
-
-<!-- It may still be helpful to peek here to verify that your tables match the -->
-<!-- desired output. -->
-
-<!-- [Click here to enter R in Pharma RStudio Cloud work space for {gtreg}](https://rstudio.cloud/spaces/299322/join?access_code=Vnp96stsVIDLiEJI7AtHAQ4GB1gsptQgnOGb99_N){target="_blank"} -->
-
-<!-- **Otherwise:** Follow along this document, work on your personal computer, -->
-<!-- and challenge yourself not to peek at the code solutions until you have completed -->
-<!-- the exercise. -->
-
-<!-- # Packages -->
-
-<!-- ```{r} -->
-<!-- #| label: packages -->
-<!-- #| message: false -->
-<!-- #| echo: true -->
-<!-- #| code-fold: false -->
-<!-- library(tidyverse) -->
-<!-- library(gtsummary) -->
-<!-- library(gtreg) -->
-<!-- library(labelled) -->
-<!-- library(admiral)       # for subject data -->
-<!-- library(admiral.test)  # for ae data -->
-<!-- ``` -->
-
-<!-- # Output display setting -->
-
-<!-- ```{r} -->
-<!-- #| label: output-setting -->
-<!-- #| message: false -->
-<!-- #| echo: true -->
-<!-- #| code-fold: false -->
-<!-- theme_gtsummary_compact() -->
-<!-- ``` -->
-
-
-
-<!-- # The Data -->
+**Recommended:** Complete these exercises in the dedicated R in Pharma RStudio Cloud work space, which comes with
+
+1. all packages pre-installed, and
+
+2. an Rmarkdown document to fill in.
+
+It may still be helpful to peek here to verify that your tables match the
+desired output.
+
+[Click here to enter R in Pharma RStudio Cloud work space for our workshop](https://rstudio.cloud/spaces/299322/join?access_code=Vnp96stsVIDLiEJI7AtHAQ4GB1gsptQgnOGb99_N){target="_blank"}
+
+**Otherwise:** Follow along this document, work on your personal computer,
+and challenge yourself not to peek at the code solutions until you have completed
+the exercise.
+
+# Exercise 1
+
+Create a demographic table by using only dplyr. 
+
+* The data should have only age, gender, and treatment columns. 
+* The table should include the mean and standard deviation of age, the count and percentage.
+
+```{r}
+# Load necessary libraries
+library(dplyr)
+
+# Sample data frame with demographic data
+set.seed(123)
+data <- data.frame(
+  id = 1:100,
+  age = sample(18:80, 100, replace = TRUE),
+  gender = sample(c("Male", "Female"), 100, replace = TRUE),
+  treatment = sample(c("Treatment A", "Treatment B"), 100, replace = TRUE)
+)
+
+# Count participants per treatment group to get labels with counts
+treatment_counts <- data |> 
+  count(treatment) |> 
+  mutate(treatment_label = paste0(treatment, " (N=", n, ")"))
+
+# Create the demographic summary table
+demographic_table <- data |> 
+  # Join with treatment counts to include the labeled treatment names
+  left_join(treatment_counts, by = "treatment") |>
+  # Summarize age, female, and male counts and percentages by the labeled treatment
+  group_by(treatment_label) |> 
+  summarise(
+    `Mean Age (SD)` = paste0(round(mean(age), 1), " (", round(sd(age), 1), ")"),
+    `N Female (%)` = paste0(sum(gender == "Female"), " (", round(sum(gender == "Female") / n() * 100, 1), "%)"),
+    `N Male (%)` = paste0(sum(gender == "Male"), " (", round(sum(gender == "Male") / n() * 100, 1), "%)"),
+    .groups = "drop"
+  ) |>
+  # Transpose for easy review if needed
+  t() |>
+  print()
+
+```
+# Exercise 2
+
+Build a demografic table using {rtables} or {gtsummary}. Data is provided as follows:
+```{r}
+# Load Libraries & Data
+library(dplyr)
+
+adsl <- random.cdisc.data::cadsl
+advs <- random.cdisc.data::cadvs
+
+# Pre-Processing - Add any variables needed in your table to df
+adsl <- adsl |> 
+  mutate(AGEGR1 = as.factor(case_when(
+    AGE >= 17 & AGE < 65 ~ "≥17 to &lt;65",
+    AGE >= 65 ~ "≥65",
+    AGE >= 65 & AGE < 75 ~ "≥65 to &lt;75",
+    AGE >= 75 ~ "≥75"
+  )))
+
+advs <- advs |> 
+  filter(AVISIT == "BASELINE", VSTESTCD == "TEMP") %>%
+  select("USUBJID", "AVAL")
+
+anl <- left_join(adsl, advs, by = "USUBJID")
+```
+```{r, eval=FALSE}
+  df <- df %>%
+    filter(.data[[saffl_var]] == "Y") %>%
+    df_explicit_na()
+
+  alt_counts_df <- alt_counts_df_preproc(alt_counts_df, id_var, arm_var, saffl_var)
+
+  lyt <- basic_table_annot(show_colcounts, annotations) %>%
+    split_cols_by_arm(arm_var, lbl_overall) %>%
+    analyze_vars(
+      vars = vars,
+      var_labels = lbl_vars,
+      show_labels = "visible",
+      .stats = c("mean_sd", "median_range", "count_fraction"),
+      .formats = NULL,
+      na.rm = na_rm
+    ) %>%
+    append_topleft("Characteristic")
+
+  tbl <- build_table(lyt, df = df, alt_counts_df = alt_counts_df)
+  if (prune_0) tbl <- prune_table(tbl)
 
-<!-- For these exercises we will be using STDM and ADaM datasets from the [{admiral.test}](https://github.com/pharmaverse/admiral.test) and [{admiral}](https://pharmaverse.github.io/admiral/index.html) and packages. -->
-
-
-<!-- First, prepare a subject level data set named `subjects` from the `admiral_adsl` data set -->
-<!-- with only the variables `USUBJID`, `ACTARM`, `AGE`, `SEX`, `RACE` and subjects who screen failed removed. -->
-
-<!-- ```{r} -->
-<!-- #| label: prep-subjects -->
-<!-- #| echo: true -->
-<!-- #| code-fold: false -->
-<!-- dat_subjects <- admiral_adsl %>% -->
-<!--   filter(ACTARM != "Screen Failure" & ACTARM %in% c("Placebo", "Xanomeline High Dose") ) %>% -->
-<!--   select(USUBJID, ACTARM, AGE, SEX, RACE) %>% -->
-<!--   mutate(across(RACE, str_to_title)) %>% -->
-<!--   mutate( -->
-<!--     # convert treatment arm and race to factors for table displays in a specific order -->
-<!--     ACTARM = fct_relevel(ACTARM, "Placebo", "Xanomeline High Dose"), -->
-<!--     RACE = fct_infreq(RACE) -->
-<!--   ) %>% -->
-<!--   set_variable_labels( -->
-<!--     ACTARM = "Actual treatment arm", -->
-<!--     RACE = "Race" -->
-<!--   ) -->
-<!-- ``` -->
+  tbl
+```
 
-<!-- Next, prepare an adverse event data set named `ae` from `admiral_ae` with the -->
-<!-- only the variables `USUBJID`, `AESOC`, `AEDECOD`, `AESEV`, `AESER`, `AEREL`, `AESTDTC`. -->
+```{r, eval=FALSE}
+df <- df %>% df_explicit_na()
 
-<!-- Join actual treatment arm (`ACTARM`) from the `subjects` data frame to the `ae` data. -->
+tbl <- df %>%
+  tbl_summary(
+    by = arm_var,
+    type = all_continuous() ~ "continuous2",
+    statistic = list(
+      all_continuous() ~ c(
+        "{mean} ({sd})",
+        "{median} ({min} - {max})"
+      ),
+      all_categorical() ~ "{n} ({p}%)"
+    ),
+    digits = all_continuous() ~ 1,
+    missing = ifelse(na_rm, "no", "ifany"),
+    label = as.list(lbl_vars) %>% setNames(vars)
+  ) %>%
+  gtsummary::bold_labels() %>%
+  modify_header(all_stat_cols() ~ "**{level}**  \nN = {n}") %>%
+  add_overall(last = TRUE, col_label = paste0("**", lbl_overall, "**  \nN = {n}")) %>%
+  gtsummary::add_stat_label(label = all_continuous2() ~ c("Mean (SD)", "Median (min - max)")) %>%
+  modify_footnote(update = everything() ~ NA) %>%
+  gtsummary::modify_column_alignment(columns = all_stat_cols(), align = "right")
 
+```
 
+# Exercise 3
 
-<!-- ```{r} -->
-<!-- #| label: prep-aes -->
-<!-- #| echo: true -->
-<!-- #| code-fold: false -->
-<!-- dat_ae <- admiral_ae %>% -->
-<!--   select(USUBJID, AESOC, AEDECOD, AESEV, AESER, AEREL, AESTDTC) %>% -->
-<!--   left_join(dat_subjects %>% select(USUBJID, ACTARM), by = "USUBJID") %>% -->
-<!--   # removing subjects  with missing treatment arm as these were the low dose -->
-<!--   # subjects excluded from the subjects data set -->
-<!--   drop_na(ACTARM) %>% -->
-<!--   mutate( -->
-<!--     AESEV = fct_relevel(AESEV, "MILD", "MODERATE", "SEVERE"), -->
-<!--     # converting treatment arm to factor -->
-<!--     # note that treatment arm must be stored the same way in the two data sets -->
-<!--     ACTARM = fct_relevel(ACTARM, "Placebo", "Xanomeline High Dose"), -->
-<!--     year = str_sub(AESTDTC, start = 1, end = 4) %>% as.numeric() -->
-<!--    ) %>% -->
-<!--   mutate(across(c(AESOC, AEDECOD, AESEV, AEREL), str_to_title)) %>% -->
-<!--   # for brevity of output, only look at AEs from a single year and in -->
-<!--   # a few SOC categories -->
-<!--   filter(year == 2014) %>% -->
-<!--   filter(AESOC %in% c("Eye Disorders", "Nervous System Disorders", "Skin And Subcutaneous Tissue Disorders")) %>% -->
-<!--   labelled::set_variable_labels( -->
-<!--      AESOC    = "Primary System Organ Class", -->
-<!--      AEDECOD  = "Dictionary-Derived Term", -->
-<!--      AESEV    = "Severity/Intensity", -->
-<!--      AEREL    = "Causality" -->
-<!--   ) -->
-<!-- ``` -->
+TLG-catalog
 
+ADAE
 
-<!-- # Exercise 1 -->
 
-<!-- Create an adverse event table saved as `t1` that summarizes adverse events. -->
+# Exercise 4
 
-<!-- 1. Summarize the adverse events by both treatment arm and severity. -->
+teal and ADAE 
 
-<!-- 2. Supply `id_df` to ensure the subject denominator is correct. -->
-
-<!-- ```{r ae-first} -->
-<!-- t1 <- dat_ae %>% -->
-<!--   tbl_ae( -->
-<!--     id_df = dat_subjects, -->
-<!--     id = USUBJID, -->
-<!--     ae = AEDECOD, -->
-<!--     soc = AESOC, -->
-<!--     by = AESEV, -->
-<!--     strata = ACTARM -->
-<!--   ) -->
-
-<!-- t1 -->
-<!-- ``` -->
-
-<!-- # Exercise 2 -->
-
-<!-- Create `t1_modify` that modifies `t1` such that: -->
-
-<!-- 1. Bold the system organ class rows. -->
-
-<!-- 2. Add an overall column to each treatment arm. -->
-
-<!-- 3. Label the overall column as `Total`. -->
-
-<!-- 4. In the header, place the number of subjects on a new line in each treatment arm. -->
-
-<!-- 5. Add a table caption that states `2014 Disorders Adverse Events` (displays at the top of the table). -->
-
-<!-- ```{r ae-modify} -->
-<!-- t1_modify <- t1 %>% -->
-<!--   bold_labels() %>% -->
-<!--   add_overall(across = 'by') %>% -->
-<!--   modify_header(all_overall_cols() ~ "**Total**") %>% -->
-<!--   modify_spanning_header(all_ae_cols(TRUE, TRUE) ~ "**{strata}**  \nN = {n}") %>% -->
-<!--   modify_caption("2014 Disorders Adverse Events") -->
-
-<!-- t1_modify -->
-<!-- ``` -->
-
-<!-- # Exercise 3 -->
-
-<!-- Create a descriptive statistics table from `subjects` named `t2` using `tbl_reg_summary`. -->
-
-<!-- 1. Summarize the variables `AGE`, `SEX` and `RACE` by treatment arm (`ACTARM`). -->
-
-<!-- 2. Add an overall column to summarize across both treatment arms. -->
-
-<!-- 3. Bold the variable labels. -->
-
-<!-- 4. In the header, place the number of subjects on a new line in each treatment arm. -->
-
-<!-- ```{r summary-first} -->
-<!-- t2 <- dat_subjects %>% -->
-<!--   select(-USUBJID) %>% -->
-<!--   tbl_reg_summary( -->
-<!--     by = ACTARM -->
-<!--   ) %>% -->
-<!--   add_overall(last = TRUE) %>% -->
-<!--   bold_labels() %>% -->
-<!--   modify_header( -->
-<!--     list( -->
-<!--       all_stat_cols(stat_0 = FALSE) ~ "**{level}**  \nN = {n}", -->
-<!--       stat_0 ~ "**Overall**  \nN = {N}" -->
-<!--     )) -->
-
-<!-- t2 -->
-<!-- ``` -->
-
-<!-- # Exercise 4 -->
-
-<!-- Create a grouped table listing of adverse events named `t3`. -->
-
-<!-- 1. Display only events of `Probable` causality. -->
-
-<!-- 2. Sort events by system organ class and term. -->
-
-<!-- 3. Print subject id, term, and whether or not the event was serious. -->
-
-<!-- 4. Group listings by system organ class. -->
-
-<!-- 5. Bold system organ class labels. -->
-
-
-
-<!-- ```{r listing} -->
-<!-- dat_list <- dat_ae %>% -->
-<!--   filter(AEREL == "Probable") %>% -->
-<!--   select(USUBJID, AESOC, AEDECOD, AESER) %>% -->
-<!--   arrange(AESOC, AEDECOD) -->
-
-<!-- t3 <- dat_list %>% -->
-<!--   tbl_listing( -->
-<!--     group_by = AESOC -->
-<!--   ) %>% -->
-<!--   bold_labels() -->
-
-<!-- t3 -->
-<!-- ``` -->
-
-<!-- # Exercise 5 -->
-
-<!-- Create `t2_shell`, a table shell from the `t2` table. This is the -->
-<!-- exact same format as `t2`, except with numeric values replaced by `xx`. -->
-
-<!-- ```{r summary-shell} -->
-<!-- t2_shell <- dat_subjects %>% -->
-<!--   select(-USUBJID) %>% -->
-<!--   tbl_reg_summary( -->
-<!--     digits = everything() ~  style_xxx, -->
-<!--     by = ACTARM -->
-<!--   ) %>% -->
-<!--   add_overall(last = TRUE) %>% -->
-<!--   bold_labels() %>% -->
-<!--   modify_header( -->
-<!--     list( -->
-<!--       all_stat_cols(stat_0 = FALSE) ~ "**{level}**  \nN = xx", -->
-<!--       stat_0 ~ "**Overall**  \nN = xx" -->
-<!--     )) -->
-
-<!-- t2_shell -->
-<!-- ``` -->
-
-
-<!-- # Exercise 6 -->
-
-<!-- Export `t2_shell` to either word or excel. -->
-
-<!-- ```{r export-xlsx, eval=FALSE} -->
-<!-- t2_shell %>% -->
-<!--  as_hux_xlsx( -->
-<!--    file = "output/summary_shell.xlsx" -->
-<!--    ) -->
-<!-- ``` -->
-
-<!-- ```{r export-word, eval=FALSE} -->
-<!-- t2_shell %>% -->
-<!--   as_flex_table() %>% -->
-<!--   flextable::save_as_docx(path = "output/summary_shell.docx") -->
-<!-- ``` -->
-
-<!-- # Session info -->
-
-<!-- ```{r} -->
-<!-- #| label: session-info -->
-<!-- #| eval: true -->
-<!-- #| code-fold: false -->
-<!-- devtools::session_info() -->
-<!-- ``` -->
-
+demographic teal.gallery
