--- a/index.qmd
+++ b/index.qmd
@@ -32,6 +32,8 @@ The workshop is not designed only for those who are masters in R. We will bring 
 
 Before attending the workshop please check our [posit cloud work space](https://posit.cloud/spaces/562648/join?access_code=fDZ1hAmNReOf6JuvxQXcHXTZezAu1qs0vrnUfyXh) and create your own assignment. All packages needed are already installed there (it is a clone of the exercise folder).
 
+## Additional resources
+
 # Instructors
 
 ![](images/Davide_Garolini-PH.png){style="float:left;padding: 0 10px 0 0;" fig-alt="Headshot of Davide Garolini" width="150"}
